# plugin-bidirectional-example

./: .gitignore  README.md  run_clean.sh  run_client.py  run_client.sh  run_server.py  run_server.sh
client/: pyproject.toml
client/example_plugin_client/: __init__.py
server/: pyproject.toml
server/example_plugin_server/: __init__.py
